--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: jitlee <jitlee@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/10/07 16:47:10 by jitlee            #+#    #+#              #
-#    Updated: 2020/10/09 17:15:30 by hyojang          ###   ########.fr        #
+#    Updated: 2020/10/11 16:57:45 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,6 +22,7 @@ FILES		= ft_memset \
 				ft_memcpy	\
 				ft_memccpy	\
 			  	ft_strlen	\
+				ft_strlcpy	\
 				ft_isalpha	\
 				ft_isdigit	\
 				ft_isalnum	\
