--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: jitlee <jitlee@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/10/07 16:47:10 by jitlee            #+#    #+#              #
-#    Updated: 2020/10/11 23:05:49 by hyojang          ###   ########.fr        #
+#    Updated: 2020/10/12 17:53:35 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,6 +21,7 @@ FILES		= ft_memset \
 			  	ft_bzero	\
 				ft_memcpy	\
 				ft_memccpy	\
+				ft_memmove	\
 			  	ft_strlen	\
 				ft_strlcpy	\
 				ft_strlcat	\
