--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/09/28 15:03:10 by hyojang           #+#    #+#              #
-#    Updated: 2020/10/23 00:36:27 by hyojang          ###   ########.fr        #
+#    Updated: 2020/10/23 00:51:35 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -54,7 +54,8 @@ FILES		= ft_memset \
 
 BONUS_FILES = ft_lstnew			\
 			  ft_lstadd_front	\
-			  ft_lstsize
+			  ft_lstsize		\
+			  ft_lstlast
 
 SRCS_DIR = ./
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .c, $(FILES)))
