--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/09/28 15:03:10 by hyojang           #+#    #+#              #
-#    Updated: 2020/10/23 01:47:01 by hyojang          ###   ########.fr        #
+#    Updated: 2020/10/23 02:10:07 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -57,7 +57,8 @@ BONUS_FILES = ft_lstnew			\
 			  ft_lstsize		\
 			  ft_lstlast		\
 			  ft_lstadd_back	\
-			  ft_lstdelone
+			  ft_lstdelone		\
+			  ft_lstiter
 
 SRCS_DIR = ./
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .c, $(FILES)))
