separate part of parsing and modified norm

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/12/14 10:32:40 by hyojang           #+#    #+#              #
-#    Updated: 2020/12/14 16:42:07 by hyojang          ###   ########.fr        #
+#    Updated: 2020/12/23 11:51:40 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,13 +17,16 @@ CFLAGS = -Wall -Werror -Wextra
 AR = ar rcs
 RM = rm -f
 
-FILES = ft_printf
+FILES = ft_atoi				\
+		ft_printf			\
+		ft_printf_utils		\
+		ft_printf_parsing
 
 SRCS_DIR = ./
-SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .c $(FILES)))
+SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .c, $(FILES)))
 
 OBJS_DIR = ./
-OBJS = $(addprefix $(OBJS_DIR), $(addsuffix .o $(FILES)))
+OBJS = $(addprefix $(OBJS_DIR), $(addsuffix .o, $(FILES)))
 
 .c.o: $(SRCS)
 	$(CC) $(CFLAGS) -c -o $@ $<
@@ -36,7 +39,7 @@ all: $(NAME)
 clean:
 	$(RM) $(OBJS)
 
-fclan: clean
+fclean: clean
 	$(RM) $(NAME)
 
 re: clean all
