--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/12/14 10:32:40 by hyojang           #+#    #+#              #
-#    Updated: 2020/12/23 11:51:40 by hyojang          ###   ########.fr        #
+#    Updated: 2020/12/23 15:22:45 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,10 +17,11 @@ CFLAGS = -Wall -Werror -Wextra
 AR = ar rcs
 RM = rm -f
 
-FILES = ft_atoi				\
-		ft_printf			\
-		ft_printf_utils		\
-		ft_printf_parsing
+FILES = ft_atoi					\
+		ft_printf				\
+		ft_printf_parsing		\
+		ft_printf_parsing_utils	\
+		ft_printf_c
 
 SRCS_DIR = ./
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .c, $(FILES)))
