temporary save .. add ft_printf_s, ft_printf_utils.c

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/12/14 10:32:40 by hyojang           #+#    #+#              #
-#    Updated: 2020/12/25 12:55:41 by hyojang          ###   ########.fr        #
+#    Updated: 2020/12/27 15:12:01 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,9 @@ FILES = ft_atoi					\
 		ft_printf				\
 		ft_printf_parsing		\
 		ft_printf_parsing_utils	\
-		ft_printf_c
+		ft_printf_utils			\
+		ft_printf_c				\
+		ft_printf_s
 
 SRCS_DIR = ./
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .c, $(FILES)))
