--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/12/14 10:32:40 by hyojang           #+#    #+#              #
-#    Updated: 2020/12/27 15:12:01 by hyojang          ###   ########.fr        #
+#    Updated: 2021/01/08 20:46:59 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,12 +18,14 @@ AR = ar rcs
 RM = rm -f
 
 FILES = ft_atoi					\
+		ft_itoa					\
 		ft_printf				\
 		ft_printf_parsing		\
 		ft_printf_parsing_utils	\
 		ft_printf_utils			\
 		ft_printf_c				\
-		ft_printf_s
+		ft_printf_s				\
+		ft_printf_d
 
 SRCS_DIR = ./
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .c, $(FILES)))
