remove marvin in header

--- a/minitalk/Makefile
+++ b/minitalk/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: marvin <marvin@student.42seoul.kr>         +#+  +:+       +#+         #
+#    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/10 20:01:05 by hyojang           #+#    #+#              #
-#    Updated: 2021/07/26 11:19:03 by hyojang          ###   ########.fr        #
+#    Updated: 2021/07/26 12:43:53 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
