--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/27 19:59:26 by hyojang           #+#    #+#              #
-#    Updated: 2021/10/28 01:18:12 by hyojang          ###   ########.fr        #
+#    Updated: 2021/10/29 23:54:22 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,15 +14,11 @@ NAME = philo
 
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
-IFLAG = -I
-LIBFT_F = ./libft
-
-LIBS = -lft
-LIB_DIR = -L./libft -L.
-
 RM = rm -f
 
-FILES = philo
+FILES = philo		\
+		ft_atoi		\
+		ft_memcpy
 
 SRCS_DIR = ./
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .c, $(FILES)))
@@ -34,18 +30,15 @@ OBJS = $(addprefix $(OBJS_DIR), $(addsuffix .o, $(FILES)))
 	$(CC) $(CFLAGS) $(IFLAG)$(LIBFT_F) -c -o $@ $<
 
 $(NAME): $(OBJS)
-	make -C $(LIBFT_F)
-	$(CC) $(CFLAGS) $(IFLAG)$(LIBFT_F) $(OBJS) $(LIB_DIR) $(LIBS) -o $(NAME)
+	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 
 all: $(NAME)
 
 clean:
 	$(RM) $(OBJS)
-	make -C $(LIBFT_F) clean
 
 fclean: clean
 	$(RM) $(NAME)
-	make -C $(LIBFT_F) fclean
 
 re: clean all
 
